<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10dp"
    tools:context=".activities.RenewalActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Renewal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_40dp"
        android:text="@string/upload_dmv_licence"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dim_15sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dim_308dp"
        android:layout_height="@dimen/dim_111dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/light_purple"
        app:cardCornerRadius="@dimen/dim_20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/doted_lines"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attach_file" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attach_document_photo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_15sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_40dp"
        android:text="@string/upload_tcl_licence"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dim_15sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dim_308dp"
        android:layout_height="@dimen/dim_111dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_10dp"
        android:background="@color/light_purple"
        app:cardCornerRadius="@dimen/dim_20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/doted_lines"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attach_file" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attach_document_photo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_15sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_20dp"
        android:layout_marginTop="@dimen/dim_40dp"
        android:text="@string/upload_ddc_licence"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dim_15sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dim_308dp"
        android:layout_height="@dimen/dim_111dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/light_purple"
        app:cardCornerRadius="@dimen/dim_20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/doted_lines"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attach_file" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attach_document_photo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_15sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/upload_send_btn"
        android:layout_width="@dimen/dim_269dp"
        android:layout_height="@dimen/dim_42dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_60dp"
        android:background="@drawable/rouned_corner_btn"
        android:text="@string/upload_send"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>