<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dim_340dp"
        android:layout_height="@dimen/dim_163dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/dim_10dp"
        android:layout_marginBottom="@dimen/dim_5dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_10dp"
                android:layout_marginTop="@dimen/dim_10dp"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:text="@string/contract"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                android:layout_marginTop="@dimen/dim_10dp"
                app:layout_constraintTop_toTopOf="parent"
              />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFCB6A"
                android:text="@string/sign_now"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.965"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_10dp"
                android:layout_marginTop="10dp"
                android:text="Compact Lack"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="@dimen/dim_10dp"
                android:text="034"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_10dp"
                android:layout_marginLeft="@dimen/dim_10dp"
                android:layout_marginTop="28dp"
                android:text="@string/updated_on"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="@dimen/dim_10dp"
                android:layout_marginTop="10dp"
                android:text="20 Oct, 2020"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.006"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="12dp"
                android:text="@string/sign_now"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dim_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:layout_constraintVertical_bias="0.162" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dim_40dp"
                android:layout_marginTop="@dimen/dim_5dp"
                android:layout_marginRight="@dimen/dim_40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
               />

            <TextView
                android:id="@+id/view_download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_download"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
