<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.example.ks.model.documentid.DocumentModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_175dp"
           android:layout_margin="@dimen/dim_10dp"
            app:cardCornerRadius="@dimen/dim_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="@dimen/dim_5dp"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dim_5dp"
                android:layout_marginVertical="@dimen/dim_5dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:layout_marginLeft="104dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/contract"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_11sp"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp"
                    android:text="@string/updated"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.704"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp"
                    android:text="@{model.name}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_10dp"
                    android:text="@{model.id}"
                    android:textColor="@android:color/black"

                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.update_at_str}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginTop="24dp"
                    android:text="@string/status"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dim_11sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sign_now"
                    android:layout_marginTop="@dimen/dim_5dp"
                    android:text="@string/sign_now"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dim_14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <Button
                    android:layout_width="193dp"
                    android:layout_height="33dp"
                    android:id="@+id/button_download"
                    android:background="@drawable/text_round_corner"
                    android:text="ViewDownload"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dim_12sp"
                    app:icon="@drawable/ic_small_download"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.532"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.887" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>